--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,8 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
+    "types": [ "node" ],
+    "typeRoots": [ "../node_modules/@types" ],
     "target": "es2020",
     "module": "es2020",
     "lib": [
